hphp/test/slow/using/bad-lambda5.php.expectf
Fatal error: Call to undefined method Closure$main;%d::__dispose() in %s/test/slow/using/bad-lambda5.php on line 5
